--- a/lfcs/4-reseau/7-tp1.md
+++ b/lfcs/4-reseau/7-tp1.md
@@ -27,7 +27,7 @@ ip addr show
 - Création du script **net-up.sh**
 
 ```
-echo ip a add 10.0.5.20/24 dev ens5 > net-up.sh
+echo "ip addr add 10.0.5.20/24 dev ens5" > net-up.sh
 ```
 
 ```
@@ -49,7 +49,7 @@ ip addr show
 - Création du script **net-down.sh**
 
 ```
-echo ip a del 10.0.5.20/24 dev ens5 > net-down.sh
+echo "ip addr del 10.0.5.20/24 dev ens5" > net-down.sh
 ```
 
 ```
@@ -77,7 +77,7 @@ ip route add 10.0.6.0/24 via 10.0.5.5 dev ens5
 - Mise à jour du script **net-up.sh**
 
 ```
-echo ip route add 10.0.6.0/24 via 10.0.5.5 dev ens5 >> net-up.sh
+echo "ip route add 10.0.6.0/24 via 10.0.5.5 dev ens5" >> net-up.sh
 ```
 
 - Suppression de la route à destination du sous-réseau **10.0.6.0/24** passant par l'adresse **10.0.5.5** de l'interface **ens5**
@@ -89,7 +89,7 @@ ip route del 10.0.6.0/24 via 10.0.5.5 dev ens5
 - Mise à jour du script **net-down.sh**
 
 ```
-echo ip route del 10.0.6.0/24 via 10.0.5.5 dev ens5 >> net-down.sh
+echo "ip route del 10.0.6.0/24 via 10.0.5.5 dev ens5" >> net-down.sh
 ```
 
 - Test des scripts
