--- a/lfcs/4-reseau/8-tp2.md
+++ b/lfcs/4-reseau/8-tp2.md
@@ -13,7 +13,7 @@ sudo -i
 - Installation du package **ntp**
 
 ```
-yum -y install ntp
+dnf -y install ntp
 ```
 
 - Configuration du service **ntpd** via son fichier **/etc/ntp.conf**
@@ -24,7 +24,6 @@ vi /etc/ntp.conf
 
 Il faudrait supprimer ou commenter toute autre ligne commençant par **server**.
 
-
 ```
 ...
 restrict 10.5.0.20
@@ -32,6 +31,10 @@ peer 10.5.0.20
 server 169.254.169.123 iburst
 ...
 ```
+
+--- **restrict 10.5.0.20** définit les restrictions d'accès pour l'adresse 10.5.0.20. <br>
+--- **peer 10.5.0.20** établit une relation de pair-à-pair avec le serveur NTP à l'adresse 10.5.0.20. <br>
+--- **server 169.254.169.123 iburst** configure le serveur NTP pour utiliser 169.254.169.123 comme source de temps et accélérer la synchronisation initiale avec l'option **iburst**.
 
 - Activation et démarrage du service **ntpd**
 
